test: update failing tests in IssuerSignedFactoryTest